# src/routes/agenciaRouter.js
@@ -1,27 +1,45 @@
 const express = require("express");
 const agenciaRouter = express.Router();
 const agenciaController = require("../controllers/agenciaController");
+const { verificarToken, verificarAdmin } = require('../middlewares/authMiddleware');
 
 agenciaRouter.get(
+    "/agencia",
     //#swagger.summary = 'Listar todas as agências'
     // #swagger.tags = ['Agência']
-    "/agencia", agenciaController.getAllAgencias
+    agenciaController.getAllAgencias
 );
 agenciaRouter.get(
+    "/agencia/:id",
     // #swagger.tags = ['Agência']
     //#swagger.summary = 'Obter detalhes de uma agência'
-    "/agencia/:id", agenciaController.getAgenciaById
+     agenciaController.getAgenciaById
 );
 agenciaRouter.post(
+    "/agencia",
+    [verificarToken, verificarAdmin],
     //#swagger.summary = 'Cadastrar nova agência'
     // #swagger.tags = ['Agência']
-    "/agencia", agenciaController.addAgencia
+    agenciaController.addAgencia
 
 );
+
+agenciaRouter.put(
+    "/agencia/:id", 
+    [verificarToken, verificarAdmin], 
+    // #swagger.tags = ['Agência']
+    // #swagger.summary = 'Atualizar dados de uma agência'
+    // #swagger.description = 'Altera informações como nome, logradouro ou cidade de uma agência específica.'
+    // #swagger.security = [{ "apiKeyAuth": [] }]
+    agenciaController.updateAgencia
+);
+
 agenciaRouter.delete(
+    "/agencia/:id",
+    [verificarToken, verificarAdmin],
     //#swagger.summary = 'Excluir registro de agência'
     // #swagger.tags = ['Agência']
-    "/agencia/:id", agenciaController.deleteAgencia
+    agenciaController.deleteAgencia
 );
 
 module.exports = agenciaRouter;
